Add code to try and display pages

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,9 +10,9 @@
 
 <p>Add a new task:</p>
 
-<form action="/to_do" method="post">
+<form action="/success" method="post">
   <label for="description">Task Description</label>
-  <input id="description" name="description" type="text">
+  <input id="description" name="description" type="text" placeholder="ex. walk the dog">
 
   <button type="submit" class="btn-danger">Add task!</button>
 </form>
